第三部分完成

--- a/非凡.html
+++ b/非凡.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
+		<div class="left1">
+			<img src="img/ad.gif" />
+		</div>	
 		<div class="top">
 		<div class="nav w">
 			<ul>
@@ -69,11 +72,336 @@
 	</div>
 	<div class="box3 w">
 		<div class="box3-1 left">
-			<div class="num"></div>
+			<div class="kecheng">
+				<h2>课程导航</h2>
+			</div>
+			<ul class="left2">
+				<li>
+					<a >平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a >平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a>平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a>平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a>平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a>平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a>平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a>平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a>平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+					<li>
+					<a>平面UI/UE</a>
+					<a href="#">PS</a>
+					<a href="#">AI</a>
+				</li>
+			</ul>
 		</div>
+		
+		<div class="box3-2 left">
+			<ul class="dongtai">
+				<li>学院动态</li>
+				<li>行业观察</li>
+				<li>学习资讯</li>
+			</ul>
+			<div class="contents">
+				<div class="contents-1">
+					<ul>
+						<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+					</ul>
+				</div>	
+						<div class="contents-1">
+					<ul>
+						<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-12</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-12</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+					</ul>
+				</div>	
+						<div class="contents-1">
+					<ul>
+						<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+							<li>
+							<a href="#"><img src="img/201709081418253.jpg"/>
+							<span>09-08</span>
+							</a>
+							<div class="num1 right">
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名</a>
+								<a href="#">非凡学院室内设计课程培训限时优惠抓紧时间报名非凡学院室内设计课程培训限时</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
 	</div>
+	   <div class="box3-3 right">
+	   	<p>热门课程</p>
+	   	<div class="imgas">
+	   		<a href="#"><img src="img/kex.jpg" /></a>
+	   		<div class="move">
+	   			<h3><a href="#">UI交互设计</a></h3>
+	   			<p><a href="#">高新职业，不学可惜</a></p>
+	   		</div>
+	   	</div>
+	   	<div class="imgas">
+	   		<a href="#"><img src="img/kex.jpg" /></a>
+	   		<div class="move">
+	   			<h3><a href="#">UI交互设计</a></h3>
+	   			<p><a href="#">高新职业，不学可惜</a></p>
+	   		</div>
+	   	</div>
+	   	<div class="imgas">
+	   		<a href="#"><img src="img/kex.jpg" /></a>
+	   		<div class="move">
+	   			<h3><a href="#">UI交互设计</a></h3>
+	   			<p><a href="#">高新职业，不学可惜</a></p>
+	   		</div>
+	   	</div>
+	   </div>
+</div>
 	<script type="text/javascript" src="js/jquery-2.1.0.js" ></script>
+	<script type="text/javascript" src="js/jquery.easing.min.js" ></script>
 	<script type="text/javascript">
+		//左侧边滚动
+		$(document).scroll(function(){
+			var H=$(window).height();
+			var TOPs=$("body").scrollTop();
+			var HL=$(".left1").height();
+			$(".left1").stop(true,true).animate({top:((H-HL)/2+TOPs)+"px"},1000,"easeOutBounce");
+		});
+		//轮播图
 		var banners=$(".banner");
 		var imgs=$(".banner a");
 		var count=imgs.length;
@@ -114,6 +442,37 @@
 			imgs.eq(index).fadeIn(200);
 			points.eq(index).addClass("active");
 		});
+		//学院动态
+		$(".box3-2 .dongtai li").hover(function(){
+			var index=$(this).index();
+			$(".box3-2 .dongtai li").removeClass("active").eq(index).addClass("active");
+			$(".contents .contents-1").hide().eq(index).show();
+		});
+		//移动
+		$(".imgas").hover(function(){
+			$(".imgas .move").animate({top:"50px"},500);
+		},function(){
+			$(".imgas .move").animate({top:"90px"},500);
+		});
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 		
 		
 		
