--- a/T3/音乐.html
+++ b/T3/音乐.html
@@ -91,7 +91,7 @@
 		</style>
 	</head>
 	<body>
-		<audio id="music" controls="controls">
+		<audio id="music">
 			<source src="media/小苹果.mp3" type="audio/mp3"></source>
 			<!--<source src="media/人生路.mp3" type="audio/mp3"></source>
 			<source src="media/刚好遇见你.mp3" type="audio/mp3"></source>-->
